// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task archived 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="list-item TASK_ARCHIVED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={true}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Test Task"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Task
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            archived
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  Task
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      task
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              id
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            '1'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              title
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'Test Task'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              state
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'TASK_ARCHIVED'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Task
              " Component
            </h3>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    task
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onArchiveTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onPinTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Test Task"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Task
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  Task
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      task
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              id
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            '1'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              title
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'Test Task'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              state
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'TASK_INBOX'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onPinTask
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          action
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onArchiveTask
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          action
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Task
              " Component
            </h3>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    task
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onArchiveTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onPinTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Task pinned 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Test Task"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Task
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            pinned
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  Task
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      task
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              id
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            '1'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              title
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'Test Task'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              state
                            </span>
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            'TASK_PINNED'
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Task
              " Component
            </h3>
            <table>
              <thead>
                <tr>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    property
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    propType
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    required
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    default
                  </th>
                  <th
                    style={
                      Object {
                        "textAlign": "left",
                        "verticalAlign": "top",
                      }
                    }
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    task
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onArchiveTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
                <tr>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    onPinTask
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  >
                    -
                  </td>
                  <td
                    style={
                      Object {
                        "paddingRight": 10,
                        "verticalAlign": "top",
                      }
                    }
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
